force-app/main/default/objects/Player__c/Player__c.object-meta.xml
<CustomObject>
    <label>Player</label>
    <pluralLabel>Players</pluralLabel>
    <nameField>
        <label>Player Name</label>
        <type>Text</type>
        
    </nameField>
    <sharingModel>Private</sharingModel>
    <description>Stores player information for the GameHub platform.</description>
</CustomObject>