force-app/main/default/objects/Player__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>USA</fullName><default>false</default><label>USA</label></value>
            <value><fullName>Canada</fullName><default>false</default><label>Canada</label></value>
            <value><fullName>UK</fullName><default>false</default><label>UK</label></value>
            <value><fullName>India</fullName><default>false</default><label>India</label></value>
            <value><fullName>Germany</fullName><default>false</default><label>Germany</label></value>
            <value><fullName>France</fullName><default>false</default><label>France</label></value>
            <value><fullName>Brazil</fullName><default>false</default><label>Brazil</label></value>
            <value><fullName>Australia</fullName><default>false</default><label>Australia</label></value>
            <value><fullName>Japan</fullName><default>false</default><label>Japan</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>