force-app/main/default/objects/Player__c/fields/Skill_Level__c.field-meta.xml
<CustomField>
    <fullName>Skill_Level__c</fullName>
    <label>Skill Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Beginner</fullName><default>true</default><label>Beginner</label></value>
            <value><fullName>Intermediate</fullName><default>false</default><label>Intermediate</label></value>
            <value><fullName>Pro</fullName><default>false</default><label>Pro</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>